// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test Message component  render basic func  1`] = `
<div>
  <button
    class="sc-Axmtr iEvvUq"
    id="btn"
  >
    <span
      class="sc-AxgMl hYLawB"
    >
      but
    </span>
  </button>
</div>
`;

exports[`test Message component  render basic func  2`] = `
<div>
  <button
    class="sc-Axmtr iEvvUq"
    id="btn"
  >
    <span
      class="sc-AxgMl hYLawB"
    >
      but
    </span>
  </button>
</div>
`;

exports[`test Message component animate duration 1`] = `
<div>
  <button
    class="sc-Axmtr iEvvUq"
    id="btn"
  >
    <span
      class="sc-AxgMl hYLawB"
    >
      but
    </span>
  </button>
</div>
`;

exports[`test Message component animate duration 2`] = `
<div>
  <button
    class="sc-Axmtr iEvvUq"
    id="btn"
  >
    <span
      class="sc-AxgMl hYLawB"
    >
      but
    </span>
  </button>
</div>
`;

exports[`test Message component animation lg delay 1`] = `
<div>
  <button
    class="sc-Axmtr iEvvUq"
    id="btn"
  >
    <span
      class="sc-AxgMl hYLawB"
    >
      but
    </span>
  </button>
</div>
`;

exports[`test Message component callback test 1`] = `
<div>
  <button
    class="sc-Axmtr iEvvUq"
    id="btn"
  >
    <span
      class="sc-AxgMl hYLawB"
    >
      but
    </span>
  </button>
</div>
`;

exports[`test Message component can change color 1`] = `
<div>
  <button
    class="sc-Axmtr iEvvUq"
    id="btn"
  >
    <span
      class="sc-AxgMl hYLawB"
    >
      but2
    </span>
  </button>
</div>
`;

exports[`test Message component can change icon 1`] = `
<div>
  <button
    class="sc-Axmtr iEvvUq"
    id="btn"
  >
    <span
      class="sc-AxgMl hYLawB"
    >
      but
    </span>
  </button>
</div>
`;

exports[`test Message component can change icon 2`] = `
<div>
  <button
    class="sc-Axmtr iEvvUq"
    id="btn"
  >
    <span
      class="sc-AxgMl hYLawB"
    >
      but
    </span>
  </button>
</div>
`;

exports[`test Message component can change icon 3`] = `
<div>
  <button
    class="sc-Axmtr iEvvUq"
    id="btn"
  >
    <span
      class="sc-AxgMl hYLawB"
    >
      but
    </span>
  </button>
</div>
`;

exports[`test Message component can change icon 4`] = `
<div>
  <button
    class="sc-Axmtr iEvvUq"
    id="btn"
  >
    <span
      class="sc-AxgMl hYLawB"
    >
      but
    </span>
  </button>
</div>
`;

exports[`test Message component can change icon 5`] = `
<div>
  <button
    class="sc-Axmtr iEvvUq"
    id="btn"
  >
    <span
      class="sc-AxgMl hYLawB"
    >
      but
    </span>
  </button>
</div>
`;

exports[`test Message component can change icon 6`] = `
<div>
  <button
    class="sc-Axmtr iEvvUq"
    id="btn"
  >
    <span
      class="sc-AxgMl hYLawB"
    >
      but
    </span>
  </button>
</div>
`;

exports[`test Message component icon type default 1`] = `
<div>
  <div>
    <button
      class="sc-Axmtr iEvvUq"
      id="btn"
    >
      <span
        class="sc-AxgMl hYLawB"
      >
        but
      </span>
    </button>
  </div>
</div>
`;
